Opened 14 years ago

Closed 14 years ago

#2128 closed defect (fixed)

yadif error: Option 'enable' not found

Reported by: André Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords: yadif
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

When called with third option, yadif throws an error.

This works:

yadif=0:-1

But this does not:

yadif=0:-1:1

How to reproduce:

% ffmpeg -report -v 9 -loglevel 99 -i in.mp4 -y -acodec copy -vcodec libx264 -s 320x208 -filter:v "yadif=0:-1:1" -vb 140k -profile:v baseline -level 3.0 out.mp4
ffmpeg started on 2013-01-10 at 09:51:45
Report written to "ffmpeg-20130110-095145.log"
ffmpeg version N-38981-g6471f63 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jan 10 2013 09:43:14 with llvm-gcc 4.2.1 (LLVM build 2336.11.00)
  configuration: --enable-libmp3lame --enable-libtheora --enable-libx264 --enable-postproc --enable-libxvid --enable-libfaac --enable-pthreads --enable-libvorbis --enable-gpl --enable-nonfree --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-version3 --enable-libvpx --enable-librtmp
  libavutil      52. 13.100 / 52. 13.100
  libavcodec     54. 86.100 / 54. 86.100
  libavformat    54. 59.107 / 54. 59.107
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 32.100 /  3. 32.100
  libswscale      2.  1.103 /  2.  1.103
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Splitting the commandline.
Reading option '-report' ... matched as option 'report' (generate a report) with argument '1'.
Reading option '-v' ... matched as option 'v' (set libav* logging level) with argument '9'.
Reading option '-loglevel' ... matched as option 'loglevel' (set libav* logging level) with argument '99'.
Reading option '-i' ... matched as input file with argument 'in.mp4'.
Reading option '-y' ... matched as option 'y' (overwrite output files) with argument '1'.
Reading option '-acodec' ... matched as option 'acodec' (force audio codec ('copy' to copy stream)) with argument 'copy'.
Reading option '-vcodec' ... matched as option 'vcodec' (force video codec ('copy' to copy stream)) with argument 'libx264'.
Reading option '-s' ... matched as option 's' (set frame size (WxH or abbreviation)) with argument '320x208'.
Reading option '-filter:v' ... matched as option 'filter' (set stream filterchain) with argument 'yadif=0:-1:1'.
Reading option '-vb' ... matched as AVOption 'vb' with argument '140k'.
Reading option '-profile:v' ... matched as option 'profile' (set profile) with argument 'baseline'.
Reading option '-level' ... matched as AVOption 'level' with argument '3.0'.
Reading option 'out.mp4' ... matched as output file.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option report (generate a report) with argument 1.
Applying option v (set libav* logging level) with argument 9.
Applying option y (overwrite output files) with argument 1.
Successfully parsed a group of options.
Parsing a group of options: input file in.mp4.
Successfully parsed a group of options.
Opening an input file: in.mp4.
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x7ff53402f400] Format mov,mp4,m4a,3gp,3g2,mj2 probed with size=2048 and score=100
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x7ff53402f400] ISO: File Type Major Brand: isom
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x7ff53402f400] File position before avformat_find_stream_info() is 30410
[h264 @ 0x7ff534037a00] Using externally provided dimensions
[aac @ 0x7ff53404a800] skip whole frame, skip left: 0
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x7ff53402f400] All info found
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x7ff53402f400] File position after avformat_find_stream_info() is 32085
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'in.mp4':
  Metadata:
    major_brand     : isom
    minor_version   : 512
    compatible_brands: isomiso2avc1mp41
    creation_time   : 1970-01-01 00:00:00
    encoder         : Lavf53.4.0
  Duration: 00:00:53.44, start: 0.000000, bitrate: 1498 kb/s
    Stream #0:0(eng), 1, 1/25: Video: h264 (Constrained Baseline) (avc1 / 0x31637661), yuv420p, 720x480 [SAR 1:1 DAR 3:2], 1/50, 1398 kb/s, 25 fps, 25 tbr, 25 tbn, 50 tbc
    Metadata:
      creation_time   : 1970-01-01 00:00:00
      handler_name    : VideoHandler
    Stream #0:1(eng), 1, 1/44100: Audio: aac (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 95 kb/s
    Metadata:
      creation_time   : 1970-01-01 00:00:00
      handler_name    : SoundHandler
Successfully openened the file.
Parsing a group of options: output file out.mp4.
Applying option acodec (force audio codec ('copy' to copy stream)) with argument copy.
Applying option vcodec (force video codec ('copy' to copy stream)) with argument libx264.
Applying option s (set frame size (WxH or abbreviation)) with argument 320x208.
Applying option filter:v (set stream filterchain) with argument yadif=0:-1:1.
Applying option profile:v (set profile) with argument baseline.
Successfully parsed a group of options.
Opening an output file: out.mp4.
Successfully openened the file.
[yadif @ 0x7ff533c0f0e0] Setting 'mode' to value '0'
[yadif @ 0x7ff533c0f0e0] Setting 'parity' to value '-1'
[yadif @ 0x7ff533c0f0e0] Setting 'enable' to value '1'
[yadif @ 0x7ff533c0f0e0] Option 'enable' not found
[AVFilterGraph @ 0x7ff533c0dec0] Error initializing filter 'yadif' with args '0:-1:1'
Error opening filters!
Statistics: 32768 bytes read, 0 seeks

Change History (2)

comment:2 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: newclosed

Fixed by you, thank you!

Note: See TracTickets for help on using tickets.