lavfi/yadif: fix shorthand/option mismatch

Fix trac ticket #2128.

Signed-off-by: Stefano Sabatini <stefasab@gmail.com>